# f-tagman

./: .gitignore  AUTHORS  CMakeLists.txt  CMakeLists.txt.user.fc65901  README.md  api.cpp  api.h  deletetag.cpp  deletetag.h  dialog.cpp  dialog.h  dialog.ui  filesysytemtest.sln  funcwindow.cpp  funcwindow.h  funcwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newwindow.cpp  newwindow.h  res.qrc
assets/: app.qrc
doc/: task-draft.md
filesysytemtest/: 1234.cpp  8.cpp  file.h  filefunction.cpp  filesys.cpp  filesysytemtest.vcxproj  filesysytemtest.vcxproj.filters  main.cpp
src/: 0506.cpp  07.cpp  1234.cpp  8.cpp  CMakeLists.txt  api.cpp  api.h  app.cpp  app.h  deletetag.ui  dialog.cpp  file.h  filefunction.cpp  filesys.cpp  funcwindow.cpp  funcwindow.h  funcwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newwindow.h  newwindow.ui  tagdb.cpp  tagdb.h  utils.h
test/: CMakeLists.txt  api_v1.cpp
